Fixed some links in the readme and demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>
-                Lightbox
+                Responsive Lightbox
             </h1>
         </div>
         <div class="description">
@@ -36,7 +36,7 @@
         </div>
         <div class="footer">
             <p>
-                v1.0 by Duncan McDougall - 2012. 
+                v1.0 by <a href="http://www.diaryofanappdeveloper.com/">Duncan McDougall</a> - 2012. 
             </p>
         </div>
     </div>
