--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Lightbox demo" />
     <link rel="author" href="https://plus.google.com/111415540551684216261/posts" />
     <link rel="stylesheet" href="demo.css?v=1.0" />
-    <link rel="stylesheet" href="../lightbox.css" />
+    <link rel="stylesheet" href="../jquery.lightbox.min.css" />
 </head>
 <body>
     <div class="container">
@@ -41,7 +41,7 @@
         </div>
     </div>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="../lightbox.js"></script>
+    <script src="../jquery.lightbox.js"></script>
     <script>
         $(function()
           {
