--- a/demo/index.html
+++ b/demo/index.html
@@ -1,52 +1,69 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Demo - Lightbox by Duncan McDougall</title>
-    <meta name="description" content="Lightbox demo" />
-    <link rel="author" href="https://plus.google.com/111415540551684216261/posts" />
-    <link rel="stylesheet" href="demo.css?v=1.0" />
-    <link rel="stylesheet" href="../jquery.lightbox.min.css" />
+  <meta charset="utf-8">
+  <title>Demo</title>
+  <style type="text/css">
+    body {
+      font-family: sans-serif;
+      font-size: 1rem;
+      color: #333;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .gallery {
+      list-style: none;
+      overflow: hidden;
+      padding: 0;
+      margin: 0;
+    }
+    .gallery li {
+      float: left;
+      margin: 4px;
+    }
+    .lightbox {
+      cursor: pointer;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.8);
+    }
+    .lightbox img {
+      display: block;
+      position: absolute;
+      border: 5px solid white;
+      -webkit-box-shadow: 0 0 20px #000000;
+      -moz-box-shadow: 0 0 20px #000000;
+      box-shadow: 0 0 20px #000000;
+      -webkit-border-radius: 1px;
+      -moz-border-radius: 1px;
+      border-radius: 1px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>
-                Responsive Lightbox
-            </h1>
-        </div>
-        <div class="description">
-            
-        </div>
-        <div class="examples">
-            <h2>
-                Examples
-            </h2>
-            <ul>
-                <li><a href="images/sample_a.jpg" rel="lightbox"><img src="images/sample_a_thumb.jpg" /></a></li>
-                <li><a href="images/sample_b.jpg" rel="lightbox"><img src="images/sample_b_thumb.jpg" /></a></li>
-                <li><a href="images/sample_c.jpg" rel="lightbox"><img src="images/sample_c_thumb.jpg" /></a></li>
-                <li><a href="images/sample_d.jpg" rel="lightbox"><img src="images/sample_d_thumb.jpg" /></a></li>
-            </ul>
-        </div>
-        <div class="instructions">
-            <h2>
-                Instructions
-            </h2>
-        </div>
-        <div class="footer">
-            <p>
-                v1.0 by <a href="http://www.diaryofanappdeveloper.com/">Duncan McDougall</a> - 2012. 
-            </p>
-        </div>
-    </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="../jquery.lightbox.js"></script>
-    <script>
-        $(function()
-          {
-             $('[rel="lightbox"]').lightbox(); 
-          });
-    </script>
+<div class="container">
+  <h1>Responsive Lightbox</h1>
+
+  <ul class="gallery">
+    <li><a href="images/sample_a.jpg"><img src="images/sample_a_thumb.jpg" /></a></li>
+    <li><a href="images/sample_b.jpg"><img src="images/sample_b_thumb.jpg" /></a></li>
+    <li><a href="images/sample_c.jpg"><img src="images/sample_c_thumb.jpg" /></a></li>
+    <li><a href="images/sample_d.jpg"><img src="images/sample_d_thumb.jpg" /></a></li>
+  </ul>
+
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="../jquery.lightbox.js"></script>
+<script>
+  // Initiate Lightbox
+  $(function() {
+    $('.gallery a').lightbox(); 
+  });
+</script>
 </body>
 </html>
