--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,7 @@
       height: 100%;
       top: 0;
       left: 0;
+      background: rgb(0, 0, 0); /* IE Fallback (Solid Colour) */
       background: rgba(0, 0, 0, 0.8);
     }
     .lightbox img {
@@ -42,6 +43,16 @@
       -webkit-border-radius: 1px;
       -moz-border-radius: 1px;
       border-radius: 1px;
+    }
+    .loading {
+      background: url(images/loading.gif) 0 0;
+      width: 31px;
+      height: 31px;
+      margin-left: -16px;
+      margin-top: -16px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
     }
   </style>
 </head>
