--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../jquery.lightbox.css">
   <style type="text/css">
     body {
       font-family: sans-serif;
@@ -23,58 +24,6 @@
     .gallery li {
       float: left;
       margin: 4px;
-    }
-    .lightbox {
-      cursor: pointer;
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background: rgb(0, 0, 0); /* IE Fallback (Solid Colour) */
-      background: rgba(0, 0, 0, 0.8);
-    }
-    .lightbox img {
-      display: block;
-      position: absolute;
-      border: 5px solid white;
-      -webkit-box-shadow: 0 0 20px #000000;
-      -moz-box-shadow: 0 0 20px #000000;
-      box-shadow: 0 0 20px #000000;
-      -webkit-border-radius: 1px;
-      -moz-border-radius: 1px;
-      border-radius: 1px;
-    }
-    .loading {
-      background: url(images/loading.gif) 0 0;
-      width: 31px;
-      height: 31px;
-      margin-left: -16px;
-      margin-top: -16px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-    }
-    .close-lightbox, .next, .previous {
-      position: absolute;
-      z-index: 9999;
-      color: #fff;
-      text-decoration: none;
-      text-align: center;
-      background: #000;
-      padding: 1%;
-    }
-    .close-lightbox {
-      right: 0;
-      top: 0;
-    }
-    .next {
-      right: 0;
-      top: 50%;
-    }
-    .previous {
-      left: 0;
-      top: 50%;
     }
   </style>
 </head>
