Edit for Sonraki
Miskate :D Not Sonrali, 'Sonraki'

--- a/demo/index_button_define.html
+++ b/demo/index_button_define.html
@@ -51,7 +51,7 @@
     $('.gallery a').lightbox({
       CloseButtonText: 'Kapat',
       PreviousButtonText: 'Önceki',
-      NextButtonText: 'Sonrali'
+      NextButtonText: 'Sonraki'
     }); 
   });
 </script>
