rewrite using CSS to resize image, change a lot of flow, and using spin.js to display loading

--- a/demo/groups.html
+++ b/demo/groups.html
@@ -51,11 +51,12 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../jquery.lightbox.js"></script>
+<script src="../spin.min.js"></script>
 <script>
   // Initiate Lightbox
   $(function() {
     $('.gallery1 a').lightbox(); 
-	$('.gallery2 a').lightbox(); 
+	$('.gallery2 a').lightbox();
   });
 </script>
 </body>
