--- a/demo/index_button_define.html
+++ b/demo/index_button_define.html
@@ -44,6 +44,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../jquery.lightbox.js"></script>
+<script src="../spin.min.js"></script>
 <script>
   // Initiate Lightbox
   // Button Text language is Turkish Kapat = Close, Önceki = Previous, Sonraki = Next
