--- a/demo/index_with_captions.html
+++ b/demo/index_with_captions.html
@@ -33,22 +33,22 @@
 
   <ul class="gallery">
     <li>
-      <a href="images/sample_a.jpg" data-caption="This is Venice. This is Venice. This is Venice. This is Venice. This is Venice">
+      <a href="images/sample_a.jpg" data-title="This is Venice. This is Venice. This is Venice. This is Venice. This is Venice">
         <img src="images/sample_a_thumb.jpg" alt="Image">
       </a>
     </li>
     <li>
-      <a href="images/sample_b.jpg" data-caption="A photo from London">
+      <a href="images/sample_b.jpg" data-title="A photo from London">
         <img src="images/sample_b_thumb.jpg" alt="Image">
       </a>
     </li>
     <li>
-      <a href="images/sample_c.jpg" data-caption="This one's from Brussels">
+      <a href="images/sample_c.jpg" data-title="This one's from Brussels">
         <img src="images/sample_c_thumb.jpg" alt="Image">
       </a>
     </li>
     <li>
-      <a href="images/sample_d.jpg" data-caption="Another London snap">
+      <a href="images/sample_d.jpg">
         <img src="images/sample_d_thumb.jpg" alt="Image">
       </a>
     </li>
