Added a third gallery to the groups demo with only one image.

--- a/demo/groups.html
+++ b/demo/groups.html
@@ -44,6 +44,10 @@
     <li><a href="http://lorempixel.com/1024/768/nature/3/"><img src="http://lorempixel.com/150/150/nature/3/" alt="Image"></a></li>
     <li><a href="http://lorempixel.com/900/1200/nature/4/"><img src="http://lorempixel.com/150/150/nature/4/" alt="Image"></a></li>
   </ul>
+  <h2>Group 3</h2>
+    <ul class="gallery gallery3">
+		<li><a href="http://lorempixel.com/500/500/sports/1/"><img src="http://lorempixel.com/150/150/sports/1/" alt="Image"></a></li>
+	</ul>
   <footer>
     <p>Lightbox Plugin and photos by <a href="http://www.twitter.com/duncanmcdougall">Duncan McDougall</a></p>
   </footer>
@@ -54,8 +58,9 @@
 <script>
   // Initiate Lightbox
   $(function() {
-    $('.gallery1 a').lightbox(); 
+	$('.gallery1 a').lightbox(); 
 	$('.gallery2 a').lightbox(); 
+	$('.gallery3 a').lightbox(); 
   });
 </script>
 </body>
