--- a/demo/groups.html
+++ b/demo/groups.html
@@ -37,7 +37,7 @@
     <li><a href="images/sample_c.jpg"><img src="images/sample_c_thumb.jpg" alt="Image"></a></li>
     <li><a href="images/sample_d.jpg"><img src="images/sample_d_thumb.jpg" alt="Image"></a></li>
   </ul>
-  <h2>Group 2</h2>
+  <h2>Group 2 - No Nav</h2>
   <ul class="gallery gallery2">
     <li><a href="http://lorempixel.com/500/500/nature/1/"><img src="http://lorempixel.com/150/150/nature/1/" alt="Image"></a></li>
     <li><a href="http://lorempixel.com/500/900/nature/2/"><img src="http://lorempixel.com/150/150/nature/2/" alt="Image"></a></li>
@@ -59,7 +59,7 @@
   // Initiate Lightbox
   $(function() {
 	$('.gallery1 a').lightbox(); 
-	$('.gallery2 a').lightbox(); 
+	$('.gallery2 a').lightbox({ nav : false }); 
 	$('.gallery3 a').lightbox(); 
   });
 </script>
