Added SCSS/LESS versions

--- a/demo/index_with_captions.html
+++ b/demo/index_with_captions.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../jquery.lightbox.css">
+  <link rel="stylesheet" type="text/css" href="../css/jquery.lightbox.css">
   <style type="text/css">
     body {
       font-family: sans-serif;
@@ -58,7 +58,7 @@
   </footer>
 </div>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../jquery.lightbox.js"></script>
 <script>
   // Initiate Lightbox
