--- a/demo/index_button_define.html
+++ b/demo/index_button_define.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../jcss/query.lightbox.css">
+  <link rel="stylesheet" type="text/css" href="../css/jquery.lightbox.css">
   <style type="text/css">
     body {
       font-family: sans-serif;
