--- a/demo/disabled_on_mobile.html
+++ b/demo/disabled_on_mobile.html
@@ -4,28 +4,8 @@
   <meta charset="utf-8">
   <title>Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../css/jquery.lightbox.css">
-  <style type="text/css">
-    body {
-      font-family: sans-serif;
-      font-size: 1rem;
-      color: #333;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .gallery {
-      list-style: none;
-      overflow: hidden;
-      padding: 0;
-      margin: 0;
-    }
-    .gallery li {
-      float: left;
-      margin: 4px;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="../jquery.lightbox.css">
+  <link rel="stylesheet" href="demo.css">
 </head>
 <body>
 <div class="container">
@@ -44,7 +24,7 @@
 </div>
 
 
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../jquery.lightbox.js"></script>
 <script>
   // Initiate Lightbox
