--- a/demo/groups.html
+++ b/demo/groups.html
@@ -27,6 +27,7 @@
   <h2>Group 3</h2>
     <ul class="gallery gallery3">
 		<li><a href="http://lorempixel.com/500/500/sports/1/"><img src="http://lorempixel.com/150/150/sports/1/" alt="Image"></a></li>
+		<li><a href="http://lorempixel.com/500/500/sports/2/"><img src="http://lorempixel.com/150/150/sports/2/" alt="Image"></a></li>
 	</ul>
   <footer>
     <p>Lightbox Plugin and photos by <a href="http://www.twitter.com/duncanmcdougall">Duncan McDougall</a></p>
